# ktxinfo

./: CMakeLists.txt  LICENSE  glnames.c  glnames.h  info.c  info.cpp  info.h  main.c  string_utils.cpp  string_utils.h  update.cpp  update.h
ktx/: CMakeLists.txt  LICENSE.md
ktx/other_include/GL/: glcorearb.h
simplejson/: CMakeLists.txt
variadictable/: variadictable.h
